@@ -43,9 +43,9 @@
 					<artifactId>junit-vintage-engine</artifactId>
 				</exclusion>
 				<exclusion>
-                    <groupId>junit</groupId>
-                    <artifactId>junit</artifactId>
-                </exclusion>
+				    <groupId>junit</groupId>
+				    <artifactId>junit</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		
@@ -88,7 +88,40 @@
 			</plugin>
 			<plugin>
 			  	<groupId>org.apache.maven.plugins</groupId>
-          		<artifactId>maven-surefire-plugin</artifactId>
+          			<artifactId>maven-surefire-plugin</artifactId>
+			</plugin>
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-compiler-plugin</artifactId>
+			    <version>3.8.1</version>
+			    <configuration>
+				<release>13</release>
+				<compilerArgs>--enable-preview</compilerArgs>
+			    </configuration>
+			</plugin>
+			<!-- This is just to make sure the class is set as main class to execute from the jar-->
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-shade-plugin</artifactId>
+			    <version>3.2.1</version>
+			    <executions>
+				<execution>
+				    <phase>package</phase>
+				    <goals>
+					<goal>shade</goal>
+				    </goals>
+				    <configuration>
+					<transformers>
+					    <transformer
+						    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+					    <transformer
+						    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+						<mainClass>com.stackoverflow.nullpointer.expression.SwitchExpressions</mainClass>
+					    </transformer>
+					</transformers>
+				    </configuration>
+				</execution>
+			    </executions>
 			</plugin>
 		</plugins>
 	</build>
